Create gatlingFx gradle task